force-app/main/default/objects/Flow_Entity_Mapper__mdt.object
<CustomObject>
    <description>Maps Objects to flows to be made available for launching the Flow List Sidebar Component</description>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <description>API Name of the Flow</description>
        <inlineHelpText>API Name of the Flow</inlineHelpText>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>Label of the Flow to be shown in the List Component</description>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Sequence__c</fullName>
        <description>Order of the flow to be shown in the list</description>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <description>Object API Name or Record Type for the object on which to show the flow</description>
        <label>Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_API_Name__c</fullName>
        <description>API Name of the Flow</description>
        <label>Flow API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wrapper_Component__c</fullName>
        <description>API Name of the Aura Component in which the flow is instantiated</description>
        <label>Wrapper Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Flow Entity Mapper</label>
    <pluralLabel>Flow Entity Mapper</pluralLabel>
</CustomObject>